Changes from Emir - new version

--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -34,7 +34,13 @@ margin: 0 12%;
 #navigation-menu-page3 {
     display:none;
 }
-#menu4 {
+#navigation-menu-page4 {
+    display:none;
+}
+#navigation-menu-page5 {
+    display:none;
+}
+#navigation-menu-page6 {
     display:none;
 }
 
