Changes from Emir - Almost done

--- a/css/jquery.mobile-1.4.5.css
+++ b/css/jquery.mobile-1.4.5.css
@@ -990,7 +990,7 @@ html body .ui-group-theme-a a:visited {
 html .ui-bar-a a:hover,
 html .ui-body-a a:hover,
 html body .ui-group-theme-a a:hover {
-	color: #005599 /*{a-link-hover}*/;
+	color: #cc6a33 /*{a-link-hover}*/;
 }
 .ui-page-theme-a a:active,
 html .ui-bar-a a:active,
