--- a/css/slicknav.css
+++ b/css/slicknav.css
@@ -52,7 +52,7 @@
   background-color: #f5f5f5;
 }
 .slicknav_menu {
-    background:#4c4c4c;
+    background:#cc6a33;
     padding:5px;
 }
 .slicknav_nav {
