Changes from Emir -  04.02.2015

--- a/css/jquery.mobile-1.4.5.css
+++ b/css/jquery.mobile-1.4.5.css
@@ -937,7 +937,7 @@ html .ui-alt-icon .ui-radio-off:after {
 html .ui-bar-a .ui-bar-inherit,
 html .ui-body-a .ui-bar-inherit,
 html body .ui-group-theme-a .ui-bar-inherit {
-	background-color: 			#e9e9e9 /*{a-bar-background-color}*/;
+	background-color: #e9e9e9 /*{a-bar-background-color}*/;
 	border-color:	 		#ddd /*{a-bar-border}*/;
 	color: 					#333 /*{a-bar-color}*/;
 	text-shadow: 0 /*{a-bar-shadow-x}*/ 1px /*{a-bar-shadow-y}*/ 0 /*{a-bar-shadow-radius}*/ 	#eee /*{a-bar-shadow-color}*/;
@@ -964,6 +964,10 @@ html .ui-body-a .ui-body-inherit,
 html body .ui-group-theme-a .ui-body-inherit,
 html .ui-panel-page-container-a {
 	background-color: 			#fff /*{a-body-background-color}*/;
+    background: -webkit-linear-gradient(#fff, #3388cc)); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(#fff,#3388cc)); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(#fff, #3388cc)); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(#fff, #3388cc)); /* Standard syntax */
 	border-color:	 		#ddd /*{a-body-border}*/;
 	color: 					#333 /*{a-body-color}*/;
 	text-shadow: 0 /*{a-body-shadow-x}*/ 1px /*{a-body-shadow-y}*/ 0 /*{a-body-shadow-radius}*/ 	#f3f3f3 /*{a-body-shadow-color}*/;
@@ -984,6 +988,10 @@ html body .ui-group-theme-a a {
 html .ui-bar-a a:visited,
 html .ui-body-a a:visited,
 html body .ui-group-theme-a a:visited {
+    background: -webkit-linear-gradient(#fff, #cc6a33)); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(#fff, #cc6a33)); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(#fff, #cc6a33)); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(#fff, #cc6a33)); /* Standard syntax */
 
 }
 .ui-page-theme-a a:hover,
@@ -1120,7 +1128,7 @@ html body .ui-group-theme-b .ui-bar-inherit {
 }
 /* Body: Read-only lists, text inputs, collapsible content */
 .ui-body-b,
-.ui-page-theme-b .ui-body-inherit,
+
 html .ui-bar-b .ui-body-inherit,
 html .ui-body-b .ui-body-inherit,
 html body .ui-group-theme-b .ui-body-inherit,
@@ -2508,6 +2516,7 @@ button.ui-btn-icon-notext,
 		float: left;
 		width: 20%;
 		margin: .5em 2% 0 0;
+
 	}
 	.ui-popup .ui-field-contain > label,
 	.ui-popup .ui-field-contain .ui-controlgroup-label,
@@ -2580,6 +2589,7 @@ li.ui-block-e {
 	margin-right: 0;
 	padding: 0;
 	list-style: none;
+
 }
 /* No margin in grids for 100% width button elements until we can use max-width: fill-available; */
 [class*="ui-block-"] > button.ui-btn {
