Changes from Emir -  05.02.2015

--- a/css/themes/emirtheme1.css
+++ b/css/themes/emirtheme1.css
@@ -249,7 +249,7 @@ html body .ui-group-theme-a .ui-bar-inherit {
 	background-color: #56463a /*{a-page-background-color}*/;
 	border-color: #bbbbbb /*{a-page-border}*/;
 	color: #f3f3f2 /*{a-page-color}*/;
-	text-shadow: 0 /*{a-page-shadow-x}*/ 1px /*{a-page-shadow-y}*/ 0 /*{a-page-shadow-radius}*/ #0f100f /*{a-page-shadow-color}*/;
+	text-shadow: 0 /*{a-page-shadow-x}*/ 1px /*{a-page-shadow-y}*/ 0 /*{a-page-shadow-radius}*/ #56463a /*{a-page-shadow-color}*/;
 }
 /* Body: Read-only lists, text inputs, collapsible content */
 .ui-body-a,
