--- a/css/slicknav.css
+++ b/css/slicknav.css
@@ -95,8 +95,8 @@
     -webkit-border-radius: 6px;
     -moz-border-radius: 6px;
     border-radius: 6px;
-    background:#ccc;
-    color:#222;
+    background:#fff;
+    color:#56463a;
 }
 .slicknav_nav .slicknav_txtnode {
      margin-left:15px;   
