--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -221,9 +221,9 @@ input#contact-submit-dugme {
 .callbacks_nav {
   position: absolute;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
-  top: 25%;
+  top: 28%;
   left: 0;
-  opacity: 0.7;
+  opacity: 0.3;
   z-index: 3;
   text-indent: -9999px;
   overflow: hidden;
@@ -262,5 +262,5 @@ input#contact-submit-dugme {
 }
 .veliko-dugme {
     height: 50px;
-    line-height: 3em;
+    line-height: 50px;
 }
